--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
           name: Install CMAKE
           command: 'apt-get update && sudo apt-get install -y cmake'
       - run:
+          name: Install TCL interpreter
+          command: 'apt-get update && sudo apt-get install -y tcl'
+      - run:
           name: Install GNU m4
           command: 'apt-get update && sudo apt-get install -y m4'
       - run:
