--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs:
           name: Install TCL interpreter
           command: 'apt-get update && sudo apt-get install -y tcl'
       - run:
+          name: Install TCLx interpreter
+          command: 'apt-get update && sudo apt-get install -y tclx'
+      - run:
           name: Install GNU m4
           command: 'apt-get update && sudo apt-get install -y m4'
       - run:
