--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,9 @@ jobs:
           name: Install TCLx interpreter
           command: 'apt-get update && sudo apt-get install -y tclx'
       - run:
+          name: Install re2c tool
+          command: 'apt-get update && sudo apt-get install -y re2c'
+      - run:
           name: Install GNU m4
           command: 'apt-get update && sudo apt-get install -y m4'
       - run:
