--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,12 @@
 version: 2
 
 jobs:
+  deploy-job:
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+              - "e0:5b:b4:24:41:a1:18:a0:cf:fc:45:ef:3d:4c:09:00"
   build:
     docker:
       - image: "debian:stretch"
@@ -39,9 +45,6 @@ jobs:
       - run:
           name: Install GIT
           command: 'apt-get update && sudo apt-get install -y git'
-      - add_ssh_keys:
-          fingerprints:
-              - "03:d7:8a:c6:ba:e5:e3:6f:c2:2c:0d:0c:4e:8b:ac:b9"
       - run:
           name: Install ESS e3
           command: |
