One more missing tool...

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
   build:
     docker:
       - image: "debian:stretch"
+      - image: circleci/python:2.7.15
     steps:
       - checkout
       - add_ssh_keys:
