--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2
 jobs:
   build:
     docker:
+      - image: "ubuntu:16.04"
       - image: circleci/python:2.7.15
     steps:
       - checkout
