--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,9 @@ version: 2
 jobs:
   build:
     docker:
-      - image: "ubuntu:16.04"
+      - image: "debian:stretch"
     steps:
       - checkout
-      - add_ssh_keys:
-          fingerprints:
-              - "e0:5b:b4:24:41:a1:18:a0:cf:fc:45:ef:3d:4c:09:00"
       - run:
           name: Installing SUDO
           command: 'apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*'
