--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,12 @@ jobs:
           name: Installing SUDO
           command: 'apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*'
       - run:
+          name: Install GIT
+          command: 'apt-get update && sudo apt-get install -y git'
+      - run:
+          name: clone ECMC
+          command: 'git clone git@bitbucket.org:europeanspallationsource/m-epics-ecmc.git'
+      - run:
           name: Installing GCC
           command: 'apt-get update && apt-get install -y gcc g++'
       - run:
@@ -36,9 +42,6 @@ jobs:
       - run:
           name: Install WGET
           command: 'apt-get update && sudo apt-get install -y wget'
-      - run:
-          name: Install GIT
-          command: 'apt-get update && sudo apt-get install -y git'
       - run:
           name: Install ESS e3
           command: |
