--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: 'apt-get update && sudo apt-get install -y git'
       - run:
           name: clone ECMC
-          command: 'git clone git@bitbucket.org:europeanspallationsource/m-epics-ecmc.git'
+          command: 'ssh-keyscan -H bitbucket.org >> ~/.ssh/known_hosts && git clone git@bitbucket.org:europeanspallationsource/m-epics-ecmc.git'
       - run:
           name: Installing GCC
           command: 'apt-get update && apt-get install -y gcc g++'
