--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,6 @@ jobs:
           name: Installing SUDO
           command: 'apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*'
       - run:
-          name: Install GIT
-          command: 'apt-get update && sudo apt-get install -y git'
-      - run:
-          name: clone ECMC
-          command: 'sudo mkdir ~/.ssh && sudo ssh-keyscan -H bitbucket.org >> ~/.ssh/known_hosts && git clone git@bitbucket.org:europeanspallationsource/m-epics-ecmc.git'
-      - run:
           name: Installing GCC
           command: 'apt-get update && apt-get install -y gcc g++'
       - run:
@@ -45,6 +39,8 @@ jobs:
       - run:
           name: Install ESS e3
           command: |
+              sudo mkdir ~/.ssh
+              sudo ssh-keyscan -H bitbucket.org >> ~/.ssh/known_hosts
               cd /usr/local/src
               git clone https://github.com/icshwi/e3
               cd e3
