--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,9 @@ jobs:
           name: Install WGET
           command: 'apt-get update && sudo apt-get install -y wget'
       - run:
+          name: Install GIT
+          command: 'apt-get update && sudo apt-get install -y git'
+      - run:
           name: Install ESS e3
           command: |
               sudo mkdir ~/.ssh
