--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,9 @@ jobs:
           name: Install WGET
           command: 'apt-get update && sudo apt-get install -y wget'
       - run:
+          name: Install Mercurial
+          command: 'apt-get update && sudo apt-get install -y mercurial'
+      - run:
           name: Install GIT
           command: 'apt-get update && sudo apt-get install -y git'
       - run:
