--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
           name: Install CMAKE
           command: 'apt-get update && sudo apt-get install -y cmake'
       - run:
+          name: Install Debian helpers (autoreconf, e.g.)
+          command: 'apt-get update && sudo apt-get install -y dh-*'
+      - run:
           name: Install DKMS
           command: 'apt-get update && sudo apt-get install -y dkms'
       - run:
