--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,9 @@ jobs:
           name: Install autoconf-archive
           command: 'apt-get update && sudo apt-get install -y autoconf-archive'
       - run:
+          name: Install Linux kernel (etherlab master needs it...)
+          command: 'apt-get update && sudo apt-get install -y dpkg-dev'
+      - run:
           name: Install Debian helpers (autoreconf, e.g.)
           command: 'apt-get update && sudo apt-get install -y dh-*'
       - run:
