--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,17 +16,11 @@ jobs:
           name: Install CMAKE
           command: 'apt-get update && sudo apt-get install -y cmake'
       - run:
-          name: Install autoconf
-          command: 'apt-get update && sudo apt-get install -y autoconf'
+          name: Install Linux source needed by etherlab master...
+          command: 'apt-get update && sudo apt-get source -y'
       - run:
-          name: Install autoconf-archive
-          command: 'apt-get update && sudo apt-get install -y autoconf-archive'
-      - run:
-          name: Install Linux kernel (etherlab master needs it...)
-          command: 'apt-get update && sudo apt-get install -y dpkg-dev'
-      - run:
-          name: Install Debian helpers (autoreconf, e.g.)
-          command: 'apt-get update && sudo apt-get install -y dh-*'
+          name: Install some packages needed by etherlab master...
+          command: 'apt-get update && sudo apt-get install -y automake autoconf autoconf-archive dh-autoreconf pkg-config'
       - run:
           name: Install DKMS
           command: 'apt-get update && sudo apt-get install -y dkms'
