--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
           name: Install CMAKE
           command: 'apt-get update && sudo apt-get install -y cmake'
       - run:
+          name: Install Linux source needed by etherlab master...
+          command: 'apt-get update && sudo apt-get install linux-headers-$(uname -r)'
+      - run:
           name: Install some packages needed by etherlab master...
           command: 'apt-get update && sudo apt-get install -y automake autoconf autoconf-archive dh-autoreconf pkg-config'
       - run:
