--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           name: Install CMAKE
           command: 'apt-get update && sudo apt-get install -y cmake'
       - run:
-          name: Install Linux source needed by etherlab master...
+          name: Install Linux headers needed by etherlab master...
           command: 'apt-get update && sudo apt-get install -y linux-headers-$(uname -r)'
       - run:
           name: Install some packages needed by etherlab master...
@@ -54,7 +54,7 @@ jobs:
       - run:
           name: Install EtherLab Master
           command: |
-              sudo mkdir ~/.ssh
+              sudo mkdir -p ~/.ssh
               sudo ssh-keyscan -H bitbucket.org >> ~/.ssh/known_hosts
               cd /usr/local/src
               git clone https://github.com/icshwi/etherlabmaster.git 
