--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,20 +16,17 @@ jobs:
           name: Install CMAKE
           command: 'apt-get update && sudo apt-get install -y cmake'
       - run:
+          name: Install DKMS
+          command: 'apt-get update && sudo apt-get install -y dkms'
+      - run:
           name: Install Linux headers needed by etherlab master...
           command: 'apt-get update && sudo apt-get install -y linux-headers-$(uname -r)'
       - run:
           name: Install some packages needed by etherlab master...
           command: 'apt-get update && sudo apt-get install -y automake autoconf autoconf-archive dh-autoreconf pkg-config'
       - run:
-          name: Install DKMS
-          command: 'apt-get update && sudo apt-get install -y dkms'
-      - run:
-          name: Install TCL interpreter
-          command: 'apt-get update && sudo apt-get install -y tcl'
-      - run:
-          name: Install TCLx interpreter
-          command: 'apt-get update && sudo apt-get install -y tclx'
+          name: Install TCL and TCLx interpreter
+          command: 'apt-get update && sudo apt-get install -y tcl tclx'
       - run:
           name: Install re2c tool
           command: 'apt-get update && sudo apt-get install -y re2c'
@@ -79,3 +76,28 @@ jobs:
               ./e3.bash req
               ./e3.bash -c mod
               ./e3.bash -e mod
+      - run:
+          name: Starting EtherCAT simulator, in background
+          command: |
+              cd /usr/local/src
+              cd e3/e3-ethercatmc/m-epics-ethercatmc/test
+              ./run-EthercatMC-simulator.sh &
+              sleep 5
+      - run:
+          name: Starting m-epics-ethercatmc IOC connected to the simulator, in background
+          command: |
+              cd /usr/local/src
+              cd e3/e3-ethercatmc
+              source tools/setenv
+              cd m-epics-ethercatmc/startup
+              ln -s ../test/startup/st.SolAxis-SimCfgDbg.cmd
+              ln -s ../test/startup/SimAxis.cfg
+              export IOC_SH=$(which iocsh.bash)
+              procServ -e $(IOC_SH) -n "Ethercat motor axis simulation" -i ^D^C 20000 ./st.SolAxis-SimCfgDbg.cmd
+              sleep 5
+      - run:
+          name: Performing motor tests using runnign m-epics-ethercatmc IOC
+          command: |
+              cd /usr/local/src
+              cd e3/e3-ethercatmc/m-epics-ethercatmc/test/nose_tests
+              ./runTests.sh IOC:m1
