--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,9 @@ jobs:
           name: Install GIT
           command: 'apt-get update && sudo apt-get install -y git'
       - run:
+          name: Install procServ
+          command: 'apt-get update && sudo apt-get install -y procserv'
+      - run:
           name: Install EtherLab Master
           command: |
               cd /usr/local/src
