--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,9 @@ jobs:
           name: Install procServ
           command: 'apt-get update && sudo apt-get install -y procserv'
       - run:
+          name: Install Python libraries
+          command: 'apt-get update && sudo apt-get install -y build-essential python-setuptools python-pip python-dev'
+      - run:
           name: Install EtherLab Master
           command: |
               cd /usr/local/src
