--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,15 +83,12 @@ jobs:
               ./e3.bash -c mod
               ./e3.bash -e mod
       - run:
-          name: Starting EtherCAT simulator, in background
+          name: Starting EtherCAT simulator, m-epics-ethercatmc IOC connected to it (in background) and run the tests...
           command: |
               cd /usr/local/src
               cd e3/e3-ethercatmc/m-epics-ethercatmc/test
               ./run-EthercatMC-simulator.sh &
               sleep 5
-      - run:
-          name: Starting m-epics-ethercatmc IOC connected to the simulator, in background
-          command: |
               cd /usr/local/src/e3
               source tools/setenv
               cd /usr/local/src/e3/e3-ethercatmc/m-epics-ethercatmc/startup
@@ -100,10 +97,5 @@ jobs:
               export IOC_SH=$(which iocsh.bash)
               procServ -e $IOC_SH -n "Ethercat motor axis simulation" -i ^D^C 20000 ./st.SolAxis-SimCfgDbg.cmd
               sleep 5
-      - run:
-          name: Performing motor tests using runnign m-epics-ethercatmc IOC
-          command: |
-              cd /usr/local/src/e3
-              source tools/setenv
               cd /usr/local/src/e3/e3-ethercatmc/m-epics-ethercatmc/test/nose_tests
               ./runTests.sh IOC:m1
