--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,19 +83,29 @@ jobs:
               ./e3.bash -c mod
               ./e3.bash -e mod
       - run:
-          name: Starting EtherCAT simulator, m-epics-ethercatmc IOC connected to it (in background) and run the tests...
+          name: Starting EtherCAT simulator, in background
           command: |
               cd /usr/local/src
               cd e3/e3-ethercatmc/m-epics-ethercatmc/test
               ./run-EthercatMC-simulator.sh &
               sleep 5
+      - run:
+          name: Starting m-epics-ethercatmc IOC connected to the simulator, in background
+          command: |
               cd /usr/local/src/e3
               source tools/setenv
               cd /usr/local/src/e3/e3-ethercatmc/m-epics-ethercatmc/startup
               ln -s ../test/startup/st.SolAxis-SimCfgDbg.cmd
+              sed -i '1s/.*/require asyn,4.33/' st.SolAxis-SimCfgDbg.cmd
+              sed -i '2s/.*/require EthercatMC,2.1.0/' st.SolAxis-SimCfgDbg.cmd
               ln -s ../test/startup/SimAxis.cfg
               export IOC_SH=$(which iocsh.bash)
-              iocsh.bash ./st.SolAxis-SimCfgDbg.cmd
+              procServ -e $IOC_SH -n "Ethercat motor axis simulation" -i ^D^C 20000 ./st.SolAxis-SimCfgDbg.cmd
               sleep 5
+      - run:
+          name: Performing motor tests using runnign m-epics-ethercatmc IOC
+          command: |
+              cd /usr/local/src/e3
+              source tools/setenv
               cd /usr/local/src/e3/e3-ethercatmc/m-epics-ethercatmc/test/nose_tests
               ./runTests.sh IOC:m1
