--- a/EthercatMCApp/Db/Makefile
+++ b/EthercatMCApp/Db/Makefile
@@ -18,6 +18,7 @@ include $(TOP)/configure/CONFIG
 DB += EthercatMC.template
 DB += EthercatMCdebug.template
 DB += EthercatMChome.template
+DB += EthercatMCindexer.template
 DB += EthercatMCslit_soft.template
 DB += EthercatMCslit_hard.template
 DB += EthercatMCslitAvoidCollSoftlimits.template
