--- a/EthercatMCApp/Db/EthercatMCindexer.template
+++ b/EthercatMCApp/Db/EthercatMCindexer.template
@@ -38,6 +38,14 @@ record(mbbi,"$(PREFIX)$(MOTOR_NAME)-StatusCode") {
     field(FFST, "ERR-F")
 }
 
+record(longin, "$(PREFIX)$(MOTOR_NAME)-StatusBits")
+{
+    field(DTYP, "asynInt32")
+    field(DESC, "StatusBits")
+    field(INP,  "@asyn($(MOTOR_PORT),$(AXIS_NO))StatusBits")
+    field(SCAN, "I/O Intr")
+}
+
 
 record(stringin, "$(PREFIX)$(MOTOR_NAME)-DESC-RB") {
     field(DTYP, "asynOctetRead")
@@ -61,4 +69,65 @@ record(stringout, "$(PREFIX)$(MOTOR_NAME)-EGU_") {
     field(DOL, "$(PREFIX)$(MOTOR_NAME)-EGU-RB CP")
     field(OUT, "$(PREFIX)$(MOTOR_NAME).EGU")
     field(OMSL, "closed_loop")
+}
+
+record(stringin, "$(PREFIX)$(MOTOR_NAME)-AuxBit0") {
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(MOTOR_PORT),$(AXIS_NO))AuxBit0")
+    field(SCAN, "I/O Intr")
+}
+record(stringin, "$(PREFIX)$(MOTOR_NAME)-AuxBit1") {
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(MOTOR_PORT),$(AXIS_NO))AuxBit1")
+    field(SCAN, "I/O Intr")
+}
+record(stringin, "$(PREFIX)$(MOTOR_NAME)-AuxBit2") {
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(MOTOR_PORT),$(AXIS_NO))AuxBit2")
+    field(SCAN, "I/O Intr")
+}
+record(stringin, "$(PREFIX)$(MOTOR_NAME)-AuxBit3") {
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(MOTOR_PORT),$(AXIS_NO))AuxBit3")
+    field(SCAN, "I/O Intr")
+}
+record(stringin, "$(PREFIX)$(MOTOR_NAME)-AuxBit4") {
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(MOTOR_PORT),$(AXIS_NO))AuxBit4")
+    field(SCAN, "I/O Intr")
+}
+record(stringin, "$(PREFIX)$(MOTOR_NAME)-AuxBit5") {
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(MOTOR_PORT),$(AXIS_NO))AuxBit5")
+    field(SCAN, "I/O Intr")
+}
+record(stringin, "$(PREFIX)$(MOTOR_NAME)-AuxBit6") {
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(MOTOR_PORT),$(AXIS_NO))AuxBit6")
+    field(SCAN, "I/O Intr")
+}
+record(stringin, "$(PREFIX)$(MOTOR_NAME)-AuxBit7") {
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(MOTOR_PORT),$(AXIS_NO))AuxBit7")
+    field(SCAN, "I/O Intr")
+}
+record(stringin, "$(PREFIX)$(MOTOR_NAME)-AuxBit8") {
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(MOTOR_PORT),$(AXIS_NO))AuxBit8")
+    field(SCAN, "I/O Intr")
+}
+record(stringin, "$(PREFIX)$(MOTOR_NAME)-AuxBit9") {
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(MOTOR_PORT),$(AXIS_NO))AuxBit9")
+    field(SCAN, "I/O Intr")
+}
+record(stringin, "$(PREFIX)$(MOTOR_NAME)-AuxBit10") {
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(MOTOR_PORT),$(AXIS_NO))AuxBit10")
+    field(SCAN, "I/O Intr")
+}
+record(stringin, "$(PREFIX)$(MOTOR_NAME)-AuxBit11") {
+    field(DTYP, "asynOctetRead")
+    field(INP,  "@asyn($(MOTOR_PORT),$(AXIS_NO))AuxBit11")
+    field(SCAN, "I/O Intr")
 }
