--- a/EthercatMCApp/Db/EthercatMC.template
+++ b/EthercatMCApp/Db/EthercatMC.template
@@ -301,6 +301,16 @@ record(ai,"$(PREFIX)$(MOTOR_NAME)-HomPos-RB") {
     field(SCAN, "I/O Intr")
 }
 
+record(ai,"$(PREFIX)$(MOTOR_NAME)-fActPos"){
+  field(PINI, "1")
+  field(TSE, -2)
+  field(DTYP, "asynFloat64")
+  field(INP,  "@asyn($(ASYN_PORT),0,1)ADSPORT=852/Main.M$(AXIS_NO).fActPosition?")
+  field(PREC, "3")
+  field(SCAN,"I/O Intr")
+}
+
+
 record (asyn, "$(PREFIX)$(MOTOR_PORT):asyn")
 {
 }
