Simulator: Break out ADS_Write into ams.c
Start to restructure the ams/ads code:
Break out the (write) handling from sock-ads.c into ams.c

In the next commit we will break out the read handling as well.

--- a/test/simulator/EtherCAT/Makefile
+++ b/test/simulator/EtherCAT/Makefile
@@ -75,6 +75,7 @@ MOTOROBJS=\
  $(BIN)/indexer.o
 
 TELOBJS=\
+ $(BIN)/ams.o \
  $(BIN)/main.o \
  $(BIN)/sock-ads.o \
  $(BIN)/sock-util.o \
@@ -101,6 +102,13 @@ ALLOBJS=$(MOTOROBJS) $(TELOBJS) $(WINOBJS)
 $(BIN)/simMotor$(EXE): $(ALLOBJS)
 	$(CC) $(ALLOBJS) $(LINKWINSOCK) -o $@
 
+$(BIN)/ams.o: \
+ Makefile \
+ ams.h \
+ logerr_info.h \
+ ams.c
+	$(CC) -c $(CFLAGS) ams.c -o $@
+
 $(BIN)/main.o: \
  Makefile \
  logerr_info.h \
@@ -110,6 +118,7 @@ $(BIN)/main.o: \
 
 $(BIN)/sock-ads.o: \
  Makefile \
+ ams.h \
  logerr_info.h \
  sock-util.h \
  sock-ads.h \
