Add EthercatMCADS.cpp, part1
Prepare forbinary transfer, and a new file, where ADS should be
handled: EthercatMCADS.cpp
Not yet tested.

--- a/EthercatMCApp/src/Makefile
+++ b/EthercatMCApp/src/Makefile
@@ -14,6 +14,7 @@ DBD += EthercatMcSupport.dbd
 
 # The following are compiled and added to the Support library
 
+EthercatMcSupport_SRCS += EthercatMCADS.cpp
 EthercatMcSupport_SRCS += EthercatMCController.cpp
 EthercatMcSupport_SRCS += EthercatMCAxis.cpp
 EthercatMcSupport_SRCS += EthercatMCHelper.cpp
