--- a/Makefile.EEE
+++ b/Makefile.EEE
@@ -21,6 +21,7 @@ SOURCES = \
 
 TEMPLATES = \
   EthercatMCApp/Db/EthercatMC.template \
+  EthercatMCApp/Db/EthercatMCads.template \
   EthercatMCApp/Db/EthercatMCdebug.template \
   EthercatMCApp/Db/EthercatMChome.template \
   EthercatMCApp/Db/EthercatMCreadback.template \
