Homing procedure 14 means "homable"
Homing 14 has been reserved, call it "Homable" instead.

--- a/EthercatMCApp/Db/EthercatMC.template
+++ b/EthercatMCApp/Db/EthercatMC.template
@@ -296,7 +296,7 @@ record(mbbi,"$(PREFIX)$(MOTOR_NAME)-HomProc-RB") {
     field(ELST, "IndexNfromLimBwd")
     field(TVST, "IndexNfromLimFwd")
     field(TTST, "HomeSwiLeftRight")
-    field(FTST, "Reserved")
+    field(FTST, "Homable")
     field(FFST, "ManSetPos")
 }
 
