--- a/EthercatMCApp/Db/EthercatMC.template
+++ b/EthercatMCApp/Db/EthercatMC.template
@@ -141,6 +141,21 @@ record(ai,"$(PREFIX)$(MOTOR_NAME)-CfgUREV-RB") {
     field(SCAN, "I/O Intr")
 }
 
+record(ai,"$(PREFIX)$(MOTOR_NAME)-CfgPMIN-RB") {
+    field(DESC, "Absolute Minimum")
+    field(DTYP, "asynFloat64")
+    field(PREC, "$(PREC)")
+    field(INP,"@asyn($(MOTOR_PORT),$(AXIS_NO))CfgPMIN-RB")
+    field(SCAN, "I/O Intr")
+}
+record(ai,"$(PREFIX)$(MOTOR_NAME)-CfgPMAX-RB") {
+    field(DESC, "Absolute Maximum")
+    field(DTYP, "asynFloat64")
+    field(PREC, "$(PREC)")
+    field(INP,"@asyn($(MOTOR_PORT),$(AXIS_NO))CfgPMAX-RB")
+    field(SCAN, "I/O Intr")
+}
+
 record(ai,"$(PREFIX)$(MOTOR_NAME)-CfgSPDB-RB") {
     field(DESC, "Set point dead band window")
     field(DTYP, "asynFloat64")
